# ukpyn

./: .env-example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  analyze_jan27_anomaly.py  analyze_jan27_spike.py  mkdocs.yml  pyproject.toml  test_fields_check.py
.github/: dependabot.yml  unmanaged-datasets-report.md  unmanaged-datasets.json
.github/workflows/: ci.yml  docs-pages.yml  publish-pypi.yml  publish-testpypi.yml  registry-audit.yml  version-tag.yml
docs/: accessibility.md  getting-started.md  glossary.md  index.md  llms.txt  orchestrators.md  tutorials.md
docs/stylesheets/: extra.css
examples/: PLAN.md  README.md  forecasting.ipynb  powerflow_raw_Brighton_Local_33kV_2024-01-01_to_2024-04-01.csv  powerflow_raw_Weybridge_11kV_2024-01-01_to_2024-04-01.csv  weather_features_brighton.csv  weatherdata.ipynb  weybridge_powerflow.csv
scripts/: snapshot_field_schemas.py  sync_unmanaged_registry.py  test_field_fetch.py
src/ukpyn/: __init__.py  cli.py  client.py  config.py  dataset_registry.py  exceptions.py  field_schemas.json  models.py  registry.py  registry_sync.py  spatial.py
src/ukpyn/integrations/: __init__.py  _base.py  weather.py
src/ukpyn/orchestrators/: __init__.py  base.py  curtailment.py  ders.py  dfes.py  dnoa.py  flexibility.py  gis.py  ltds.py  network.py  powerflow.py  registry.py  resources.py
src/ukpyn/utils/: __init__.py  powerflow_helpers.py  stats.py  timeseries.py
tests/: conftest.py  test_cli.py  test_client.py  test_client_core_coverage.py  test_client_params.py  test_config.py  test_exceptions.py  test_integrations.py  test_models.py  test_registry_sync.py  test_registry_sync_more.py  test_spatial.py  test_tutorials.py  test_utils_stats.py  test_utils_timeseries.py
tests/orchestrators/: conftest.py  test_additional_orchestrators.py  test_base.py  test_base_runtime.py  test_ders.py  test_flexibility.py  test_ltds.py  test_ltds_coverage_more.py  test_network_powerflow_more.py  test_remaining_wrappers.py  test_wrapper_coverage_push.py
tutorials/: 01-getting-started.ipynb  02-fetching-data.ipynb  03-analysis-patterns.ipynb  04-ltds-network-planning.ipynb  05-flexibility-markets.ipynb  06-powerflow-timeseries.ipynb  07-curtailment-events.ipynb  08-geospatial-data.ipynb  09-pandapower-cim-import.ipynb  09-pandapower-import.ipynb  10-powerflow-quality-control.ipynb  11-cim-xml-import.ipynb  12-la-energy-strategy-demo.ipynb  README.md  demo-video-commentary.md  demo-video-script.ipynb  licence_boundaries.geojson
websites/: README.md
